--- a/pom.xml
+++ b/pom.xml
@@ -12,5 +12,10 @@
 			<artifactId>dubbo</artifactId>
 			<version>2.7.3</version>
 		</dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+        </dependency>
 	</dependencies>
 </project>
